--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -101,10 +101,11 @@ foreach ($categories as $_category){
 		foreach($_category->getChildren() as $subcategory){
 			$c = Mage::getModel('catalog/category')->load($subcategory->getId());
 			if (!$c->getSale_start_date() == null) {
-				$fivedays = date('y-m-d H:G:00', strtotime("+5 days"));
+				$fivedays = date('y-m-d H:G:00', strtotime("+7 days"));
 				$today = date('y-m-d H:G:00');
+				$startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
 				$enddate = date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00';
-				if ($enddate > $today && $enddate > $fivedays) {
+				if ($startdate > $today && $startdate > $fivedays) {
 					$sortedArrayByDates[strtotime($c->getSale_start_date())][] = $c->getName();
 				}
 			}
