--- a/app/design/frontend/default/rooja/template/page/1column.phtml
+++ b/app/design/frontend/default/rooja/template/page/1column.phtml
@@ -35,7 +35,7 @@
 <?php echo $this->getChildHtml('head') ?>
 </head>
 <?php /* AM EDIT - Redirect to Login Page */ ?>
-<?php Mage::getSingleton('customer/session')->setBeforeAuthUrl($current_url);  //save requested URL for later redirection
+<?php Mage::getSingleton('customer/session')->setBeforeAuthUrl($this->getRequest()->getRequestUri());  //save requested URL for later redirection
 if(!Mage::getSingleton('customer/session')->isLoggedIn()) {  // if not logged in
     header("Status: 301");
     header('Location: '.$this->getUrl('customer/account/login')) ;  // send to the login page
