--- a/app/design/frontend/base/default/template/customer/address.phtml
+++ b/app/design/frontend/base/default/template/customer/address.phtml
@@ -53,7 +53,7 @@
 				<?php endif ?>
 			</div>
 			
-			<div class="twothird-col left">
+			<div class="twothird left">
 				<div class="col-1 third">
                 	<p><strong><?php echo $this->__('Additional Address Entries') ?></strong></p>
 				</div>
