--- a/app/design/frontend/default/rooja/template/page/2columns-left.phtml
+++ b/app/design/frontend/default/rooja/template/page/2columns-left.phtml
@@ -36,7 +36,7 @@
 </head>
 <?php /* AM EDIT - Redirect to Login Page */ ?>
 <?php Mage::getSingleton('customer/session')->setBeforeAuthUrl($this->getRequest()->getRequestUri());  //save requested URL for later redirection
-if(!Mage::getSingleton('customer/session')->isLoggedIn() || ($agent !="facebookexternalhit/1.1") ) {  // if not logged in
+if(!Mage::getSingleton('customer/session')->isLoggedIn() ) {  // if not logged in
     header("Status: 301");
     header('Location: '.$this->getUrl('customer/account/login')) ;  // send to the login page
     exit; 
