invite friend css

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1230,7 +1230,7 @@ input.invite-button{height: 36px; color: #fff; font-size:14px; padding: 0px 10px
 
 .inputbox .label, .addthis_toolbox  {padding: 10px 0;}
 
-.referred-friends-table {background:#e2e2e2;}
+#referred-friends-table {background:#e2e2e2; border:0px;}
 
 /* ======================================================================================= */
 
