--- a/app/design/frontend/default/rooja/template/page/2columns-left.phtml
+++ b/app/design/frontend/default/rooja/template/page/2columns-left.phtml
@@ -35,6 +35,10 @@
 <?php echo $this->getChildHtml('head') ?>
 </head>
 <?php /* AM EDIT - Redirect to Login Page */ ?>
+<?php if(isset($_SERVER['HTTP_USER_AGENT'])){
+    $agent = $_SERVER['HTTP_USER_AGENT'];
+}
+?>
 <?php Mage::getSingleton('customer/session')->setBeforeAuthUrl($this->getRequest()->getRequestUri());  //save requested URL for later redirection
 if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebookexternalhit/1.1")) {  // if not logged in
     header("Status: 301");
