--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -157,7 +157,7 @@ foreach ($categories as $_category){
 	</nav>
 
 <?php $session = Mage::getSingleton('customer/session');
-if($session->isLoggedIn()) {$customer = $session->getCustomer();}
+if($session->isLoggedIn() && ($agent !="facebookexternalhit/1.1 (+http://www.facebook.com/externalhit_uatext.php)")) {$customer = $session->getCustomer();}
 ?>
 	
 	<aside id="accountLinks">
