--- a/app/design/frontend/default/rooja/template/page/product.phtml
+++ b/app/design/frontend/default/rooja/template/page/product.phtml
@@ -41,7 +41,7 @@
 }
 ?>
 <?php Mage::getSingleton('customer/session')->setBeforeAuthUrl($current_url);  //save requested URL for later redirection
-if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebookexternalhit/1.1")) {  // if not logged in
+if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebookexternalhit/1.1 (+http://www.facebook.com/externalhit_uatext.php)")) {  // if not logged in
     header("Status: 301");
     header('Location: '.$this->getUrl('customer/account/login')) ;  // send to the login page
     exit; 
