--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -114,50 +114,12 @@ foreach ($categories as $_category){
 }
 ?>
 </ul>
-<?php /*
-		<ul>
-			<li><a href="#" title="">Women</a>
-	    		<div>
-	    		<ul>
-	    			<li>New Sales</li>
-					<li><a href="#">Hyden Yoo</a></li>
-					<li><a href="#">True Religion</a></li>
-					<li><a href="#">Dockers</a></li>
-					<li><a href="#">BOSS</a></li>
-					<li><a href="#">Marc Jacobs</a></li>
-					<li><a href="#">AG</a></li>
-				</ul>
-				<ul>
-	    			<li>Ending Soon</li>
-					<li><a href="#">Flight 101</a></li>
-					<li><a href="#">Swatch</a></li>
-					<li><a href="#">Abercrombie</a></li>
-					<li><a href="#">7 for All Mankind</a></li>
-	    		</ul>
-	    		</div>
-	    	</li>
-			<li><a href="#" title="">Men</a>
-				<div>
-				<ul>
-					<li>New Sales</li>
-					<li><a href="#">Hyden Yoo</a></li>
-					<li><a href="#">True Religion</a></li>
-				</ul>
-				<ul>	
-					<li>Ending Soon</li>
-					<li><a href="#">Flight 101</a></li>
-					<li><a href="#">Swatch</a></li>
-					<li><a href="#">Abercrombie</a></li>
-					<li><a href="#">7 for All Mankind</a></li>
-				</ul>
-				</div>
-			</li>
-			<li><a href="#" title="">Travel</a></li>
-	    </ul> */ ?>
+<?php if(isset($_SERVER['HTTP_USER_AGENT'])){$agent = $_SERVER['HTTP_USER_AGENT'];}?>
+<?php if($agent =="facebookexternalhit/1.1 (+http://www.facebook.com/externalhit_uatext.php)"){echo '<h1>Hi Facebook</h1>';}else{ ?>
 	</nav>
 
 <?php $session = Mage::getSingleton('customer/session');
-if($agent =="facebookexternalhit/1.1 (+http://www.facebook.com/externalhit_uatext.php)"){echo '<h1>Hi Facebook</h1>';}else{
+
 if($session->isLoggedIn()) {$customer = $session->getCustomer();}
 ?>
 	
