--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -114,10 +114,9 @@ foreach ($categories as $_category){
 }
 ?>
 </ul>
-<?php if(isset($_SERVER['HTTP_USER_AGENT'])){$agent = $_SERVER['HTTP_USER_AGENT'];}?>
-<?php if($agent =="facebookexternalhit/1.1 (+http://www.facebook.com/externalhit_uatext.php)"){echo '<h1>Hi Facebook</h1>';}else{ ?>
-	</nav>
-
+</nav>
+	<?php if(isset($_SERVER['HTTP_USER_AGENT'])){$agent = $_SERVER['HTTP_USER_AGENT'];}?>
+	<?php if($agent =="facebookexternalhit/1.1 (+http://www.facebook.com/externalhit_uatext.php)"){}else{ ?>
 <?php $session = Mage::getSingleton('customer/session');
 
 if($session->isLoggedIn()) {$customer = $session->getCustomer();}
