--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 			
-			<div class="twothird-col left">
+			<div class="twothird left">
 				<div class="col-1 third">
                 	<p><strong><?php echo $this->__('Shipping') ?></strong></p>
 				</div>
