--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -30,7 +30,7 @@
 		            <a class="editable right" href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage') ?></a>
         <div class="box-content">
 	            <h2><?php echo $this->__('Address Book') ?></h2>
-			<div class="twothird left">	                
+			<div class="left">	                
 				<div class="col-1 third">
 					<p><strong><?php echo $this->__('Billing') ?></strong></p>
 				</div>
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 			
-			<div class="twothird left">
+			<div class="left">
 				<div class="col-1 third">
                 	<p><strong><?php echo $this->__('Shipping') ?></strong></p>
 				</div>
