--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1105,7 +1105,7 @@ tr.summary-details-excluded { font-style:italic; }
 #checkout-progress-wrapper .block-title {color:#431f4b;border: none;font-size:20px;margin: 0 0 10px;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;}
 #checkout-progress-wrapper .block-content {line-height: 20px;font-size: 14px;}
 .block-progress dt {background-color:#645967;color: #fff;padding: 5px 10px;margin-bottom:1px;}
-.block-progress dt .complete{background: #431f4b;}
+.block-progress dt .complete{background: #431f4b; font-size: 12px;}
 /* ======================================================================================= */
 
 
