--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -119,7 +119,7 @@ if (!$categoryIds == null){
 					
 					<p id="likeThis">
 					
-					<fb:like layout="button_count" width="80" style="margin:3px 0 0;float:right" title="testing"></fb:like>
+					<fb:like layout="button_count" width="60" style="margin:3px 0 0;float:right" title="testing"></fb:like>
 					
 					<script type="text/javascript">
 						jQuery.noConflict();
@@ -160,7 +160,7 @@ $url = "http://api.facebook.com/restserver.php?method=links.getStats&urls=".urle
 $xml = file_get_contents($url);
 $xml = simplexml_load_string($xml);
 echo $likes = $xml->link_stat->like_count;
-?> people like this item
+?> people like this</p>
 					<?php /* hidding this 
 					<a href="#" id="likeBtn" class="tr fr">Like this item</a></p>
 					*/ ?>
