--- a/app/design/frontend/default/rooja/layout/customer.xml
+++ b/app/design/frontend/default/rooja/layout/customer.xml
@@ -227,6 +227,7 @@ Customer account home dashboard layout
         <reference name="my.account.wrapper">
             <block type="customer/account_dashboard" name="customer_account_dashboard" template="customer/account/dashboard.phtml">
                 <block type="customer/account_dashboard_hello" name="customer_account_dashboard_hello" as="hello" template="customer/account/dashboard/hello.phtml"/>
+				<block type="sales/order_recent" name="customer_account_dashboard_top" as="recentorders" template="sales/order/recent.phtml"/>
                 <block type="core/template" name="customer_account_dashboard_top" as="top" />
                 <block type="customer/account_dashboard_info" name="customer_account_dashboard_info" as="info" template="customer/account/dashboard/info.phtml"/>
                 <block type="customer/account_dashboard_newsletter" name="customer_account_dashboard_newsletter" as="newsletter" template="customer/account/dashboard/newsletter.phtml"/>
