--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -66,7 +66,7 @@
 </section>
 
 <?php
-$lastOrder = Mage::getModel('sales/order')->load(Mage::getSingleton('checkout/session')->getLastOrderId());
+$lastOrder = Mage::getModel('sales/order')->load($orderIdx));
 echo $billingAddress = $lastOrder->getBillingAdress();
 echo $shippingAddress = $lastOrder->getShippingAdress();
 
