--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -295,6 +295,10 @@ p.required { font-size:10px; text-align:right; color:#d68536; }
 .success-msg,
 .note-msg,
 .notice-msg {padding:8px;font-size:1.2em;font-weight:bold;}
+.error-msg span,
+.success-msg span,
+.note-msg span,
+.notice-msg span{padding:5px;}
 .error-msg { background-color:#CC6600; color:#fff; }
 .success-msg { background-color:#645967;  color:#fff; }
 .note-msg,
