--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -179,7 +179,7 @@ p.control input.radio { margin-right:6px; }
 /* Grouped fields */
 /*.form-list { width:535px; margin:0 auto; overflow:hidden; }*/
 .form-list li { margin:0 0 8px; line-height: 20px;font-size: 14px;}
-.form-list label { text-align:left; color:#999; position:relative; z-index:0; }
+.form-list label { text-align:left; color:#000; position:relative; z-index:0; }
 .form-list label.required {}
 .form-list label.required em { float:right; font-style:normal; color:#d68536; position:absolute; top:0; right:-8px; }
 .form-list li.control label { float:none; }
@@ -934,7 +934,7 @@ tr.summary-details-excluded { font-style:italic; }
 .shipping .form-list input.input-text {width: auto;float: right;}
 .container h2 {color: #fff;margin: 0 0 10px;}
 .container .std h2 {color: #000;}
-.discount h2, .shipping h2, .sp-methods dt  {font-size:14px;margin: 0 0 10px;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;text-transform: uppercase;}
+form#discount-coupon-form .discount h2, .shipping h2, .sp-methods dt  {font-size:14px;margin: 0 0 10px;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;text-transform: uppercase;}
 .sp-methods dt {font-size: 18px;}
 .sp-methods dd {margin: 10px 0;line-height: 25px;}
 .sp-methods {margin: 20px 0 5px;font-size: 14px;}
