--- a/app/design/frontend/base/default/layout/contacts.xml
+++ b/app/design/frontend/base/default/layout/contacts.xml
@@ -35,7 +35,7 @@
     <contacts_index_index translate="label">
         <label>Contact Us Form</label>
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+            <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
             <action method="setHeaderTitle" translate="title" module="contacts"><title>Contact Us</title></action>
         </reference>
         <reference name="content">
