--- a/app/design/frontend/default/rooja/layout/checkout.xml
+++ b/app/design/frontend/default/rooja/layout/checkout.xml
@@ -303,9 +303,9 @@ One page checkout main layout
         <remove name="right"/>
 
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
+            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
         </reference>
-        <reference name="left">
+        <reference name="right">
             <action method="unsetChildren"></action>
             <block type="page/html_wrapper" name="checkout.progress.wrapper" translate="label">
                 <label>Checkout Progress Wrapper</label>
