--- a/app/design/frontend/default/rooja/template/page/2columns-right.phtml
+++ b/app/design/frontend/default/rooja/template/page/2columns-right.phtml
@@ -55,7 +55,7 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
         	<?php echo $this->getChildHtml('global_messages') ?>
          	<?php echo $this->getChildHtml('content') ?>
 		</section>
-		<section class="col1 fr"><?php echo $this->getChildHtml('right') ?></section>
+		<section class="col1 fr noMargin"><?php echo $this->getChildHtml('right') ?></section>
 </div>
 </section>
         <?php echo $this->getChildHtml('footer') ?>
