--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -935,7 +935,7 @@ tr.summary-details-excluded { font-style:italic; }
 .container h2 {color: #fff;margin: 0 0 10px;}
 .container .std h2 {color: #000;}
 form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 0 10px;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;text-transform: uppercase;}
-.sp-methods dt {font-size: 14px; text-transform:none; font-family: helvetica, arial, sans-serif;}
+.sp-methods dt {font-size: 14px; text-transform:none; font-family: helvetica, arial, sans-serif; padding: 5px 0;}
 .sp-methods dd {margin: 10px 0;line-height: 25px;}
 .sp-methods {margin: 20px 0 5px;font-size: 14px;}
 .discount input, .shipping input {width: 140px;height: 40px;line-height:40px;padding: 0;}
@@ -1062,7 +1062,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 /* One Page Checkout */
 .block-progress {}
 .block-progress dt { font-weight:bold; }
-.block-progress dt.complete {background-color:#431F4B;}
+.block-progress dt.complete {background-color:#431F4B; font-size:12px;}
 .block-progress dt.complete a {color: #fff;}
 .block-progress dd.complete { padding: 5px 15px;background: #E0E0E0;  }
 
