--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -87,5 +87,24 @@ echo $likes = $xml->link_stat->like_count;
 	 });
 			
 </script>
-
+<script type="text/javascript"> 
+jQuery(function() {
+ 
+    var $sidebar   = jQuery("#saleInfo"),
+        $window    = jQuery(window),
+        offset     = jQuery(sidebar).offset(),
+		maxHeight = jQuery(document).height() - 400,
+ 
+    $window.scroll(function() {
+      
+		if ($window.scrollTop() > maxHeight) {
+	            $sidebar.css({'position': 'absolute', 'top': maxHeight-85});
+	    }
+		else{
+				$sidebar.css({'position': 'fixed', 'top': '60px'});
+			}
+    });
+ 
+});
+</script>
 <?php endif; ?>
