--- a/app/design/frontend/default/rooja/template/checkout/cart/noItems.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/noItems.phtml
@@ -30,6 +30,6 @@
 
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <p><?php echo $this->__('You have no items in your shopping cart.') ?></p>
-    <p><?php echo $this->__('Click <a href="%s">here</a> to continue shopping.', $this->getContinueShoppingUrl()) ?></p>
+    <?php echo $this->__('<a href="%s" id="continueShoppingBtn">Click here to continue shopping</a>', $this->getContinueShoppingUrl()) ?>
 	</section>
 </div>
